--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     build:
       context: ./next-app
       dockerfile: Dockerfile
+      # dockerfile: Dockerfile.dev
     restart: always
     ports:
       - 3000:3000
